--- a/index.html
+++ b/index.html
@@ -659,13 +659,13 @@
                       <h3>Follow</h3>
                       <ul class="media">
                         <li>
-                          <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                          <a href="https://Instagram.com/the_developer.01"><i class="fa-brands fa-square-instagram"></i></a>
                         </li>
                         <li>
-                          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                          <a href="https://facebook.com/thedeveloper03"><i class="fa-brands fa-square-facebook"></i></a>
                         </li>
                         <li>
-                          <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                          <a href="https://twitter.com/the_developer03"><i class="fa-brands fa-square-x-twitter"></i></a>
                         </li>
                         <li>
                           <a href="#"><i class="fa-brands fa-linkedin"></i></i></a>
@@ -674,11 +674,11 @@
                     </div>
                   </div>
                   <div class="copyright">
-                      <p> &copy; 2024 <b>Company Website</b> All Right Reseved</p>
+                      <p> &copy; 2024 <b>Anon Devs Group Agency</b> All Right Reseved</p>
                   </div>
                 </div>
                </div>
               <!-- End Footer -->
-      <script src="js/script.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
