--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2 class="main-title">Article</h2>
         <div class="container">
           <div class="box">
-            <img src="img/art1.jpg" alt="">
+            <img src="img/art1.jpg" alt=""></div>
             <div class="content">
               <h3>Test Title</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
